# actovator-software-engineer-agentic-backend

./: .gitignore  README.md  logs.md  main_system_message.md  pyproject.toml  verificatio_system_message.md  verification_prompt.md
app/: constants.py  main.py
app/ai/: utils.py
app/ai/llm/: models.py
app/ai/prompts/: (raw)_coil_framework_prompt.md  (refactor)_coil_framework_prompt.md  __init__.py  architecture_prompt.md  code_editor_prompt.md  code_editor_verification_prompt.md  coil_framework_prompt copy.md  coil_framework_prompt.md  coil_verification_prompt.md  dependency_auditor_prompt.md  e2e_testing_prompt.md  e2e_testting_prompt.md  editing_prompt.md  fix_planner_prompt.md  mini_docs_creation_prompt.md  planner_prompt.md  prd_generator_prompt.md  research_prompt.md  tech_stack_prompt.md  testing_prompt.md  user_stories_generator_prompt.md
app/ai/resources/: __init__.py  serena_tools_definitions.json
app/ai/skills/: __init__.py  agent_browser_skill.md
app/ai/tools/: changelogs_tools.py  files_tools.py  git_tools.py  mcp_tools.py  models_tools.py  sandbox_tools.py  workflow_tools.py
app/ai/workflows/: __init__.py  architecture_workflow.py  coding_workflow copy 2.py  main_workflow.py  (+3 more)
app/core/: config.py
app/output/: context_gatherer_prompt.md  executor_prompt.md  verification_prompt.md
app/sandbox_templates/: nextjs_cleanup_script.sh  nextjs_template.py
app/services/: sandbox_services.py
app/utils/: azure_deployment_utils.py  changelogs_retriever_utils.py  dev_utils.py  files_utils.py  make_json_safe_patch.py
output/: updated_json.json  updated_json_write_tools.json
(+9 files in other folders)
