[project]
name = "nextjs-ai-engineer-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "copilotkit>=0.1.81",
    "deepagents>=0.4.8",
    "e2b>=2.15.3",
    "fastapi[standard]>=0.135.1",
    "langchain-core>=1.2.20",
    "langchain-google-genai>=4.2.1",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg-binary>=3.3.3",
    "pydantic-settings>=2.13.1",
    "sensai-utils>=1.6.0",
]

[tool.poetry]
packages = [
    { include = "app" }
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
